# pigweed_quickstart_cmake

./: .gitignore  .gn  BUILD.gn  BUILDCONFIG.gn  CMakeLists.txt  README.md  activate.bat  banner.txt  bootstrap.bat  bootstrap.sh  pigweed.json
apps/blinky/: CMakeLists.txt  main.cc
build_overrides/: pi_pico.gni  pigweed.gni
modules/pw_board_led/: CMakeLists.txt  backend.cmake
modules/pw_board_led_host/: CMakeLists.txt
toolchains/: host_clang.cmake
